Bug 52416 - Editor does not accept NS_TEXT_EVENT while losing input focus.  Fixed by katakai@japan.sun.com.  a=jdunn@netscape.com